--- a/index.html
+++ b/index.html
@@ -53,10 +53,12 @@
           />
           <div class="header-footer">
             <div class="header__hours">
-              <ul class="hour__list">
-                <li class="hour__list-item">hours</li>
-                <li class="hour__list-item">Monday – Friday (10:00 – 19:00)</li>
-                <li class="hour__list-item">
+              <ul class="hours__list">
+                <li class="hours__list-item">hours</li>
+                <li class="hours__list-item">
+                  Monday – Friday (10:00 – 19:00)
+                </li>
+                <li class="hours__list-item">
                   Saturday – Sunday (11:00 – 18:00)
                 </li>
               </ul>
@@ -69,7 +71,7 @@
       </header>
       <main class="content">
         <section class="menu" id="menu">
-            <h2 class="menu__title">Menu</h2>
+          <h2 class="menu__title">Menu</h2>
           <h2 class="menu__subtitle">
             We brew coffee from locally roasted, Fairtrade certified beans and
             use biodegradable cups. All teas from our collection are $2/cup.
@@ -79,24 +81,24 @@
               <h3 class="card__title">Filter</h3>
               <ul class="card__list">
                 <li class="card__list-item">
-                  <div class="item__desc">Regular (12 oz)</div>
+                  <div class="list-item__desc">Regular (12 oz)</div>
                   <div class="card__list-divider"></div>
-                  <div class="item__price">$1</div>
+                  <div class="list-item__price">$1</div>
                 </li>
                 <li class="card__list-item">
-                  <div class="item__desc">Large (16 oz)</div>
+                  <div class="list-item__desc">Large (16 oz)</div>
                   <div class="card__list-divider"></div>
-                  <div class="item__price">$1.25</div>
+                  <div class="list-item__price">$1.25</div>
                 </li>
                 <li class="card__list-item">
-                  <div class="item__desc">XL (20 oz)</div>
+                  <div class="list-item__desc">XL (20 oz)</div>
                   <div class="card__list-divider"></div>
-                  <div class="item__price">$1.50</div>
+                  <div class="list-item__price">$1.50</div>
                 </li>
                 <li class="card__list-item">
-                  <div class="item__desc">Party-size (24 oz, decaf)</div>
+                  <div class="list-item__desc">Party-size (24 oz, decaf)</div>
                   <div class="card__list-divider"></div>
-                  <div class="item__price">$1.75</div>
+                  <div class="list-item__price">$1.75</div>
                 </li>
                 <li class="card__list-item">
                   <div class="item__desc">Iced Coffee</div>
@@ -168,7 +170,7 @@
           </div>
         </section>
         <section class="recipes" id="recipes">
-            <h3 class="recipes__title">Recipes</h3>
+          <h3 class="recipes__title">Recipes</h3>
           <h3 class="recipes__subtitle">
             Check out some recipes we've collected for your home-brewing
             convenience:
@@ -219,7 +221,9 @@
                 />
               </fieldset>
               <fieldset class="form__fieldset">
-                <label for="number-of-guests" class="form__label">Number of guests *</label>
+                <label for="number-of-guests" class="form__label"
+                  >Number of guests *</label
+                >
                 <input
                   type="number"
                   class="form__input"
@@ -260,7 +264,9 @@
           </div>
         </section>
         <section class="about">
-            <h5  class="about__title"><span class="span__accent">About the</span> coffee shop</h5>
+          <h5 class="about__title">
+            <span class="span__accent">About the</span> coffee shop
+          </h5>
           <div class="about__content">
             <p class="about__paragraph">
               Our coffee shop is located in the Practicum Library's hall. It
