--- a/index.html
+++ b/index.html
@@ -52,17 +52,15 @@
             class="header__image"
           />
           <div class="header-footer">
-            <div class="header__hours">
-              <ul class="hours__list">
-                <li class="hours__list-item">hours</li>
-                <li class="hours__list-item">
+              <ul class="header-footer__list">
+                <li class="header-footer__list-item">hours</li>
+                <li class="header-footer__list-item">
                   Monday – Friday (10:00 – 19:00)
                 </li>
-                <li class="hours__list-item">
+                <li class="header-footer__list-item">
                   Saturday – Sunday (11:00 – 18:00)
                 </li>
               </ul>
-            </div>
             <div class="header__address">
               200 Success Avenue, The Town of Practicum
             </div>
