--- a/index.html
+++ b/index.html
@@ -52,15 +52,15 @@
             class="header__image"
           />
           <div class="header-footer">
-              <ul class="header-footer__list">
-                <li class="header-footer__list-item">hours</li>
-                <li class="header-footer__list-item">
-                  Monday – Friday (10:00 – 19:00)
-                </li>
-                <li class="header-footer__list-item">
-                  Saturday – Sunday (11:00 – 18:00)
-                </li>
-              </ul>
+            <ul class="header-footer__list">
+              <li class="header-footer__list-item">hours</li>
+              <li class="header-footer__list-item">
+                Monday – Friday (10:00 – 19:00)
+              </li>
+              <li class="header-footer__list-item">
+                Saturday – Sunday (11:00 – 18:00)
+              </li>
+            </ul>
             <div class="header__address">
               200 Success Avenue, The Town of Practicum
             </div>
@@ -79,29 +79,29 @@
               <h3 class="card__title">Filter</h3>
               <ul class="card__list">
                 <li class="card__list-item">
-                  <div class="list-item__desc">Regular (12 oz)</div>
+                  Regular (12 oz)
                   <div class="card__list-divider"></div>
-                  <div class="list-item__price">$1</div>
+                  $1
                 </li>
                 <li class="card__list-item">
-                  <div class="list-item__desc">Large (16 oz)</div>
+                  Large (16 oz)
                   <div class="card__list-divider"></div>
-                  <div class="list-item__price">$1.25</div>
+                  $1.25
                 </li>
                 <li class="card__list-item">
-                  <div class="list-item__desc">XL (20 oz)</div>
+                  XL (20 oz)
                   <div class="card__list-divider"></div>
-                  <div class="list-item__price">$1.50</div>
+                  $1.50
                 </li>
                 <li class="card__list-item">
-                  <div class="list-item__desc">Party-size (24 oz, decaf)</div>
+                  Party-size (24 oz, decaf)
                   <div class="card__list-divider"></div>
-                  <div class="list-item__price">$1.75</div>
+                  $1.75
                 </li>
                 <li class="card__list-item">
-                  <div class="item__desc">Iced Coffee</div>
+                  Iced Coffee
                   <div class="card__list-divider"></div>
-                  <div class="item__price">$1.25</div>
+                  $1.25
                 </li>
               </ul>
             </div>
@@ -109,24 +109,24 @@
               <h3 class="card__title">Espresso</h3>
               <ul class="card__list">
                 <li class="card__list-item">
-                  <div class="item__desc">Macchiato</div>
+                  Macchiato
                   <div class="card__list-divider"></div>
-                  <div class="item__price">$2.25</div>
+                  $2.25
                 </li>
                 <li class="card__list-item">
-                  <div class="item__desc">Cortado</div>
+                  Cortado
                   <div class="card__list-divider"></div>
-                  <div class="item__price">$2.5</div>
+                  $2.5
                 </li>
                 <li class="card__list-item">
-                  <div class="item__desc">Mocha</div>
+                  Mocha
                   <div class="card__list-divider"></div>
-                  <div class="item__price">$3</div>
+                  $3
                 </li>
                 <li class="card__list-item">
-                  <div class="item__desc">Sunrise in the Bay Area (decaf)</div>
+                  Sunrise in the Bay Area (decaf)
                   <div class="card__list-divider"></div>
-                  <div class="item__price">$10</div>
+                  $10
                 </li>
               </ul>
             </div>
@@ -134,34 +134,34 @@
               <h3 class="card__title">Baked Goods</h3>
               <ul class="card__list">
                 <li class="card__list-item">
-                  <div class="item__desc">Almond Croissant</div>
+                  Almond Croissant
                   <div class="card__list-divider"></div>
-                  <div class="item__price">$2</div>
+                  >$2
                 </li>
                 <li class="card__list-item">
-                  <div class="item__desc">Banana Bread</div>
+                  Banana Bread
                   <div class="card__list-divider"></div>
-                  <div class="item__price">$1.75</div>
+                  $1.75
                 </li>
                 <li class="card__list-item">
-                  <div class="item__desc">Key Lime Pie</div>
+                  >Key Lime Pie
                   <div class="card__list-divider"></div>
-                  <div class="item__price">$3</div>
+                  $3
                 </li>
                 <li class="card__list-item">
-                  <div class="item__desc">Blue Velvet Cake</div>
+                  Blue Velvet Cake
                   <div class="card__list-divider"></div>
-                  <div class="item__price">$3</div>
+                  $3
                 </li>
                 <li class="card__list-item">
-                  <div class="item__desc">Web Cookie</div>
+                  Web Cookie
                   <div class="card__list-divider"></div>
-                  <div class="item__price">$2</div>
+                  $2
                 </li>
                 <li class="card__list-item">
-                  <div class="item__desc">Fresh Bug’uette</div>
+                  Fresh Bug’uette
                   <div class="card__list-divider"></div>
-                  <div class="item__price">$2</div>
+                  >$2
                 </li>
               </ul>
             </div>
