some more fixing

--- a/index.html
+++ b/index.html
@@ -184,8 +184,8 @@
                 allowfullscreen
               ></iframe>
               <div class="recipes__video-caption">
-                <div class="video__title">Aeropress recipe</div>
-                <div class="video__timing">~5 min</div>
+                <div class="video__caption">Aeropress recipe</div>
+                <div class="video__caption">~5 min</div>
               </div>
             </div>
             <div class="recipes__video">
@@ -198,8 +198,8 @@
                 allowfullscreen
               ></iframe>
               <div class="recipes__video-caption">
-                <div class="video__title">French press recipe</div>
-                <div class="video__timing">~15 min</div>
+                <div class="video__caption">French press recipe</div>
+                <div class="video__caption">~15 min</div>
               </div>
             </div>
           </div>
@@ -262,9 +262,7 @@
           </div>
         </section>
         <section class="about">
-          <h5 class="about__title">
-            <span class="span__accent">About the</span> coffee shop
-          </h5>
+          <h5 class="about__title">About the coffee shop</h5>
           <div class="about__content">
             <p class="about__paragraph">
               Our coffee shop is located in the Practicum Library's hall. It
@@ -282,7 +280,7 @@
             </p>
           </div>
           <div class="about__circle"></div>
-          <div class="about__circle_animation_blurred"></div>
+          <div class="about__circle about__circle_animation_blurred"></div>
         </section>
       </main>
 
