and more fixing

--- a/index.html
+++ b/index.html
@@ -184,8 +184,8 @@
                 allowfullscreen
               ></iframe>
               <div class="recipes__video-caption">
-                <div class="video__caption">Aeropress recipe</div>
-                <div class="video__caption">~5 min</div>
+                <div class="video-caption">Aeropress recipe</div>
+                <div class="video-caption">~5 min</div>
               </div>
             </div>
             <div class="recipes__video">
@@ -198,8 +198,8 @@
                 allowfullscreen
               ></iframe>
               <div class="recipes__video-caption">
-                <div class="video__caption">French press recipe</div>
-                <div class="video__caption">~15 min</div>
+                <div class="video-caption">French press recipe</div>
+                <div class="video-caption">~15 min</div>
               </div>
             </div>
           </div>
@@ -293,8 +293,8 @@
           />
           <div class="footer__list">
             <h4 class="footer__social-heading">Social media</h4>
-            <ul class="list__items">
-              <li class="list__item">
+            <ul class="list-items">
+              <li class="list-item">
                 <a class="footer__social-link" href="#">
                   <img
                     class="footer__social-icon"
@@ -303,7 +303,7 @@
                   />Facebook
                 </a>
               </li>
-              <li class="list__item">
+              <li class="list-item">
                 <a class="footer__social-link" href="#">
                   <img
                     class="footer__social-icon"
