and moorrree fixing

--- a/index.html
+++ b/index.html
@@ -291,10 +291,9 @@
             src="./images/logo_practicum.svg"
             alt="practicum logo"
           />
-          <div class="footer__list">
-            <h4 class="footer__social-heading">Social media</h4>
-            <ul class="list-items">
-              <li class="list-item">
+          <ul class="footer__list">
+            <li class="list-item">Social media</li>
+            <li class="list-item">
                 <a class="footer__social-link" href="#">
                   <img
                     class="footer__social-icon"
@@ -313,7 +312,6 @@
                 </a>
               </li>
             </ul>
-          </div>
         </div>
         <div class="footer__copyright">© 2022 yaron amir</div>
       </footer>
