--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta name="keywords" content="HTML, CSS, JavaScript" />
     <meta name="author" content="yaron amir" />
     <link rel="stylesheet" href="./pages/index.css" />
-    <link rel="favicon" href="favicon_coffee_bean.ico" />
+    <link rel="icon" href="favicon_coffee_bean.ico" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -30,16 +30,16 @@
             src="./images/logo_coffee_shop.svg"
             alt="coffee shop logo"
           />
-          <div class="nav-links">
-            <a class="nav__link" href="#menu">Menu</a>
-            <a class="nav__link" href="#recipes">Recipes</a>
-            <a class="nav__link" href="#book-a-table">Book a table</a>
-            <a class="nav__link" href="#contacts">Contacts</a>
-          </div>
+          <ul class="nav__links">
+            <li><a class="nav__link" href="#menu">Menu</a></li>
+            <li></li><a class="nav__link" href="#recipes">Recipes</a></li>
+            <li></li><a class="nav__link" href="#book-a-table">Book a table</a></li>
+            <li></li><a class="nav__link" href="#contacts">Contacts</a></li>
+          </ul>
         </nav>
         <div class="header__content">
           <h1 class="header__title">
-            <span class="span-accent">Specialty coffee</span>in the Practicum
+            <span class="header__span-accent">Specialty coffee</span>in the Practicum
             Library
           </h1>
           <p class="header__description">
@@ -51,29 +51,30 @@
             alt="Illustration 'Inside coffee shop'"
             class="header__image"
           />
-          <div class="header-footer">
-            <ul class="header-footer__list">
-              <li class="header-footer__list-item">hours</li>
-              <li class="header-footer__list-item">
+          <div class="header__paragraphs">
+            <div class="header__paragraph">
+            <h2 class="header__list-heading">hours</h2>
+            <ul class="header__list">
+              <li class="header__list-item">
                 Monday – Friday (10:00 – 19:00)
               </li>
-              <li class="header-footer__list-item">
+              <li class="header__list-item">
                 Saturday – Sunday (11:00 – 18:00)
               </li>
-            </ul>
-            <div class="header__address">
+            </ul></div>
+            <p class="header__paragraph">
               200 Success Avenue, The Town of Practicum
-            </div>
+            </p>
           </div>
         </div>
       </header>
       <main class="content">
         <section class="menu" id="menu">
           <h2 class="menu__title">Menu</h2>
-          <h2 class="menu__subtitle">
+          <p class="menu__subtitle">
             We brew coffee from locally roasted, Fairtrade certified beans and
             use biodegradable cups. All teas from our collection are $2/cup.
-          </h2>
+          </p>
           <div class="menu__cards">
             <div class="card">
               <h3 class="card__title">Filter</h3>
@@ -168,45 +169,40 @@
           </div>
         </section>
         <section class="recipes" id="recipes">
-          <h3 class="recipes__title">Recipes</h3>
-          <h3 class="recipes__subtitle">
+          <h2 class="recipes__title">Recipes</h2>
+          <p class="recipes__subtitle">
             Check out some recipes we've collected for your home-brewing
             convenience:
-          </h3>
+          </p>
           <div class="recipes__videos">
             <div class="recipes__video">
-              <iframe
-                width="480"
-                height="273"
-                src="https://www.youtube.com/embed/j6VlT_jUVPc"
+              <iframe class="recipes__iframe"
+               src="https://www.youtube.com/embed/j6VlT_jUVPc"
                 title="YouTube video player"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen
               ></iframe>
-              <div class="recipes__video-caption">
-                <div class="video-caption">Aeropress recipe</div>
-                <div class="video-caption">~5 min</div>
-              </div>
+              <p class="recipes__video-caption">
+                <span>Aeropress recipe</span>
+                <span>~5 min</span>
+              </p>
             </div>
             <div class="recipes__video">
-              <iframe
-                width="480"
-                height="273"
+              <iframe class="recipes__iframe"
                 src="https://www.youtube.com/embed/st571DYYTR8"
                 title="YouTube video player"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen
               ></iframe>
-              <div class="recipes__video-caption">
-                <div class="video-caption">French press recipe</div>
-                <div class="video-caption">~15 min</div>
-              </div>
+              <p class="recipes__video-caption">
+                <span>French press recipe</span>
+                <span>~15 min</span>
+              </p>
             </div>
           </div>
         </section>
         <section class="reservation" id="book-a-table">
-          <h4 class="reservation__title">Book a table</h4>
-          <div class="reservation__form">
+          <h2 class="reservation__title">Book a table</h2>
             <form class="form">
               <fieldset class="form__fieldset">
                 <label for="name" class="form__label">Name *</label>
@@ -259,10 +255,9 @@
                 >
               </fieldset>
             </form>
-          </div>
         </section>
         <section class="about">
-          <h5 class="about__title">About the coffee shop</h5>
+          <h2 class="about__title">About the coffee shop</h2>
           <div class="about__content">
             <p class="about__paragraph">
               Our coffee shop is located in the Practicum Library's hall. It
@@ -292,28 +287,28 @@
             alt="practicum logo"
           />
           <ul class="footer__list">
-            <li class="list-item">Social media</li>
-            <li class="list-item">
-                <a class="footer__social-link" href="#">
-                  <img
-                    class="footer__social-icon"
-                    src="./images/facebook_white.svg"
-                    alt="facebook logo"
-                  />Facebook
-                </a>
-              </li>
-              <li class="list-item">
-                <a class="footer__social-link" href="#">
-                  <img
-                    class="footer__social-icon"
-                    src="./images/instagram_white.svg"
-                    alt="instagram logo"
-                  />Instagram
-                </a>
-              </li>
-            </ul>
+            <h2 class="footer__list-heading">Social media</h2>
+            <li class="footer__list-item">
+              <a class="footer__social-link" href="#">
+                <img
+                  class="footer__social-icon"
+                  src="./images/facebook_white.svg"
+                  alt="facebook logo"
+                />Facebook
+              </a>
+            </li>
+            <li class="footer__list-item">
+              <a class="footer__social-link" href="#">
+                <img
+                  class="footer__social-icon"
+                  src="./images/instagram_white.svg"
+                  alt="instagram logo"
+                />Instagram
+              </a>
+            </li>
+          </ul>
         </div>
-        <div class="footer__copyright">© 2022 yaron amir</div>
+        <p class="footer__copyright">© 2022 yaron amir</p>
       </footer>
     </div>
   </body>
