--- a/index.html
+++ b/index.html
@@ -32,15 +32,15 @@
           />
           <ul class="nav__links">
             <li><a class="nav__link" href="#menu">Menu</a></li>
-            <li></li><a class="nav__link" href="#recipes">Recipes</a></li>
-            <li></li><a class="nav__link" href="#book-a-table">Book a table</a></li>
-            <li></li><a class="nav__link" href="#contacts">Contacts</a></li>
+            <li><a class="nav__link" href="#recipes">Recipes</a></li>
+            <li><a class="nav__link" href="#book-a-table">Book a table</a></li>
+            <li><a class="nav__link" href="#contacts">Contacts</a></li>
           </ul>
         </nav>
         <div class="header__content">
           <h1 class="header__title">
-            <span class="header__span-accent">Specialty coffee</span>in the Practicum
-            Library
+            <span class="header__span-accent">Specialty coffee</span>in the
+            Practicum Library
           </h1>
           <p class="header__description">
             Welcome to our study zone! We've got the coffee to energize you and
@@ -53,15 +53,16 @@
           />
           <div class="header__paragraphs">
             <div class="header__paragraph">
-            <h2 class="header__list-heading">hours</h2>
-            <ul class="header__list">
-              <li class="header__list-item">
-                Monday – Friday (10:00 – 19:00)
-              </li>
-              <li class="header__list-item">
-                Saturday – Sunday (11:00 – 18:00)
-              </li>
-            </ul></div>
+              <h2 class="header__list-heading">hours</h2>
+              <ul class="header__list">
+                <li class="header__list-item">
+                  Monday – Friday (10:00 – 19:00)
+                </li>
+                <li class="header__list-item">
+                  Saturday – Sunday (11:00 – 18:00)
+                </li>
+              </ul>
+            </div>
             <p class="header__paragraph">
               200 Success Avenue, The Town of Practicum
             </p>
@@ -176,8 +177,9 @@
           </p>
           <div class="recipes__videos">
             <div class="recipes__video">
-              <iframe class="recipes__iframe"
-               src="https://www.youtube.com/embed/j6VlT_jUVPc"
+              <iframe
+                class="recipes__iframe"
+                src="https://www.youtube.com/embed/j6VlT_jUVPc"
                 title="YouTube video player"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen
@@ -188,7 +190,8 @@
               </p>
             </div>
             <div class="recipes__video">
-              <iframe class="recipes__iframe"
+              <iframe
+                class="recipes__iframe"
                 src="https://www.youtube.com/embed/st571DYYTR8"
                 title="YouTube video player"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
@@ -203,58 +206,58 @@
         </section>
         <section class="reservation" id="book-a-table">
           <h2 class="reservation__title">Book a table</h2>
-            <form class="form">
-              <fieldset class="form__fieldset">
-                <label for="name" class="form__label">Name *</label>
-                <input
-                  type="text"
-                  class="form__input"
-                  id="name"
-                  name="name"
-                  placeholder="Name Surname"
-                />
-              </fieldset>
-              <fieldset class="form__fieldset">
-                <label for="number-of-guests" class="form__label"
-                  >Number of guests *</label
-                >
-                <input
-                  type="number"
-                  class="form__input"
-                  id="number-of-guests"
-                  name="number-of-guests"
-                  placeholder="1-8"
-                />
-              </fieldset>
-              <fieldset class="form__fieldset">
-                <label for="date" class="form__label">Date & time *</label>
-                <input type="date" class="form__input" id="date" name="date" />
-              </fieldset>
-              <fieldset class="form__fieldset">
-                <label for="date" class="form__label">Your email *</label>
-                <input
-                  type="email"
-                  class="form__input"
-                  id="email"
-                  name="email"
-                  placeholder="email@email.com"
-                />
-              </fieldset>
-              <fieldset class="form__fieldset">
-                <button type="submit" class="form__button">Book a table</button>
-              </fieldset>
-              <fieldset class="form__checkbox">
-                <input
-                  type="checkbox"
-                  class="form__input-checkbox"
-                  name="i-agree"
-                  id="i-agree"
-                />
-                <label for="i-agree" class="form__label"
-                  >I agree with the terms of use</label
-                >
-              </fieldset>
-            </form>
+          <form class="form">
+            <fieldset class="form__fieldset">
+              <label for="name" class="form__label">Name *</label>
+              <input
+                type="text"
+                class="form__input"
+                id="name"
+                name="name"
+                placeholder="Name Surname"
+              />
+            </fieldset>
+            <fieldset class="form__fieldset">
+              <label for="number-of-guests" class="form__label"
+                >Number of guests *</label
+              >
+              <input
+                type="number"
+                class="form__input"
+                id="number-of-guests"
+                name="number-of-guests"
+                placeholder="1-8"
+              />
+            </fieldset>
+            <fieldset class="form__fieldset">
+              <label for="date" class="form__label">Date & time *</label>
+              <input type="date" class="form__input" id="date" name="date" />
+            </fieldset>
+            <fieldset class="form__fieldset">
+              <label for="date" class="form__label">Your email *</label>
+              <input
+                type="email"
+                class="form__input"
+                id="email"
+                name="email"
+                placeholder="email@email.com"
+              />
+            </fieldset>
+            <fieldset class="form__fieldset">
+              <button type="submit" class="form__button">Book a table</button>
+            </fieldset>
+            <fieldset class="form__checkbox">
+              <input
+                type="checkbox"
+                class="form__input-checkbox"
+                name="i-agree"
+                id="i-agree"
+              />
+              <label for="i-agree" class="form__label"
+                >I agree with the terms of use</label
+              >
+            </fieldset>
+          </form>
         </section>
         <section class="about">
           <h2 class="about__title">About the coffee shop</h2>
