--- a/index.html
+++ b/index.html
@@ -289,9 +289,10 @@
             src="./images/logo_practicum.svg"
             alt="practicum logo"
           />
+          <div class="footer__column">
+          <h2 class="footer__social-heading">Social media</h2>
           <ul class="footer__list">
-            <h2 class="footer__list-heading">Social media</h2>
-            <li class="footer__list-item">
+           <li class="footer__list-item">
               <a class="footer__social-link" href="#">
                 <img
                   class="footer__social-icon"
@@ -310,6 +311,7 @@
               </a>
             </li>
           </ul>
+        </div>
         </div>
         <p class="footer__copyright">© 2022 yaron amir</p>
       </footer>
