--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
   <body>
     <div class="page">
       <header class="header">
+        <img
+          class="header__logo"
+          src="./images/logo_coffee_shop.svg"
+          alt="coffee shop logo"
+        />
         <nav class="nav">
-          <img
-            class="logo"
-            src="./images/logo_coffee_shop.svg"
-            alt="coffee shop logo"
-          />
           <ul class="nav__links">
             <li><a class="nav__link" href="#menu">Menu</a></li>
             <li><a class="nav__link" href="#recipes">Recipes</a></li>
@@ -206,8 +206,9 @@
         </section>
         <section class="reservation" id="book-a-table">
           <h2 class="reservation__title">Book a table</h2>
+          <div class="reservation__form">
           <form class="form">
-            <fieldset class="form__fieldset">
+             <fieldset class="form__fieldset">
               <label for="name" class="form__label">Name *</label>
               <input
                 type="text"
@@ -258,6 +259,7 @@
               >
             </fieldset>
           </form>
+        </div>
         </section>
         <section class="about">
           <h2 class="about__title">About the coffee shop</h2>
@@ -290,28 +292,28 @@
             alt="practicum logo"
           />
           <div class="footer__column">
-          <h2 class="footer__social-heading">Social media</h2>
-          <ul class="footer__list">
-           <li class="footer__list-item">
-              <a class="footer__social-link" href="#">
-                <img
-                  class="footer__social-icon"
-                  src="./images/facebook_white.svg"
-                  alt="facebook logo"
-                />Facebook
-              </a>
-            </li>
-            <li class="footer__list-item">
-              <a class="footer__social-link" href="#">
-                <img
-                  class="footer__social-icon"
-                  src="./images/instagram_white.svg"
-                  alt="instagram logo"
-                />Instagram
-              </a>
-            </li>
-          </ul>
-        </div>
+            <h2 class="footer__social-heading">Social media</h2>
+            <ul class="footer__list">
+              <li class="footer__list-item">
+                <a class="footer__social-link" href="#">
+                  <img
+                    class="footer__social-icon"
+                    src="./images/facebook_white.svg"
+                    alt="facebook logo"
+                  />Facebook
+                </a>
+              </li>
+              <li class="footer__list-item">
+                <a class="footer__social-link" href="#">
+                  <img
+                    class="footer__social-icon"
+                    src="./images/instagram_white.svg"
+                    alt="instagram logo"
+                  />Instagram
+                </a>
+              </li>
+            </ul>
+          </div>
         </div>
         <p class="footer__copyright">© 2022 yaron amir</p>
       </footer>
