--- a/index.html
+++ b/index.html
@@ -51,22 +51,20 @@
             alt="Illustration 'Inside coffee shop'"
             class="header__image"
           />
-          <div class="header__paragraphs">
-            <div class="header__paragraph">
-              <h2 class="header__list-heading">hours</h2>
-              <ul class="header__list">
-                <li class="header__list-item">
-                  Monday – Friday (10:00 – 19:00)
-                </li>
-                <li class="header__list-item">
-                  Saturday – Sunday (11:00 – 18:00)
-                </li>
-              </ul>
-            </div>
-            <p class="header__paragraph">
-              200 Success Avenue, The Town of Practicum
-            </p>
+        </div>
+        <div class="header__paragraph">
+          <div class="header__paragraph header__paragraph_type_hours">
+            <h2 class="header__list-heading">hours</h2>
+            <ul class="header__list">
+              <li class="header__list-item">Monday – Friday (10:00 – 19:00)</li>
+              <li class="header__list-item">
+                Saturday – Sunday (11:00 – 18:00)
+              </li>
+            </ul>
           </div>
+          <p class="heade__paragraph header__paragraph_type_adress">
+            200 Success Avenue, The Town of Practicum
+          </p>
         </div>
       </header>
       <main class="content">
@@ -207,59 +205,59 @@
         <section class="reservation" id="book-a-table">
           <h2 class="reservation__title">Book a table</h2>
           <div class="reservation__form">
-          <form class="form">
-             <fieldset class="form__fieldset">
-              <label for="name" class="form__label">Name *</label>
-              <input
-                type="text"
-                class="form__input"
-                id="name"
-                name="name"
-                placeholder="Name Surname"
-              />
-            </fieldset>
-            <fieldset class="form__fieldset">
-              <label for="number-of-guests" class="form__label"
-                >Number of guests *</label
-              >
-              <input
-                type="number"
-                class="form__input"
-                id="number-of-guests"
-                name="number-of-guests"
-                placeholder="1-8"
-              />
-            </fieldset>
-            <fieldset class="form__fieldset">
-              <label for="date" class="form__label">Date & time *</label>
-              <input type="date" class="form__input" id="date" name="date" />
-            </fieldset>
-            <fieldset class="form__fieldset">
-              <label for="date" class="form__label">Your email *</label>
-              <input
-                type="email"
-                class="form__input"
-                id="email"
-                name="email"
-                placeholder="email@email.com"
-              />
-            </fieldset>
-            <fieldset class="form__fieldset">
-              <button type="submit" class="form__button">Book a table</button>
-            </fieldset>
-            <fieldset class="form__checkbox">
-              <input
-                type="checkbox"
-                class="form__input-checkbox"
-                name="i-agree"
-                id="i-agree"
-              />
-              <label for="i-agree" class="form__label"
-                >I agree with the terms of use</label
-              >
-            </fieldset>
-          </form>
-        </div>
+            <form class="form">
+              <fieldset class="form__fieldset">
+                <label for="name" class="form__label">Name *</label>
+                <input
+                  type="text"
+                  class="form__input"
+                  id="name"
+                  name="name"
+                  placeholder="Name Surname"
+                />
+              </fieldset>
+              <fieldset class="form__fieldset">
+                <label for="number-of-guests" class="form__label"
+                  >Number of guests *</label
+                >
+                <input
+                  type="number"
+                  class="form__input"
+                  id="number-of-guests"
+                  name="number-of-guests"
+                  placeholder="1-8"
+                />
+              </fieldset>
+              <fieldset class="form__fieldset">
+                <label for="date" class="form__label">Date & time *</label>
+                <input type="date" class="form__input" id="date" name="date" />
+              </fieldset>
+              <fieldset class="form__fieldset">
+                <label for="date" class="form__label">Your email *</label>
+                <input
+                  type="email"
+                  class="form__input"
+                  id="email"
+                  name="email"
+                  placeholder="email@email.com"
+                />
+              </fieldset>
+              <fieldset class="form__fieldset">
+                <button type="submit" class="form__button">Book a table</button>
+              </fieldset>
+              <fieldset class="form__checkbox">
+                <input
+                  type="checkbox"
+                  class="form__input-checkbox"
+                  name="i-agree"
+                  id="i-agree"
+                />
+                <label for="i-agree" class="form__label"
+                  >I agree with the terms of use</label
+                >
+              </fieldset>
+            </form>
+          </div>
         </section>
         <section class="about">
           <h2 class="about__title">About the coffee shop</h2>
