--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
               </li>
             </ul>
           </div>
-          <p class="heade__paragraph header__paragraph_type_adress">
+          <p class="header__paragraph header__paragraph_type_adress">
             200 Success Avenue, The Town of Practicum
           </p>
         </div>
